damn it works dont how

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,4 +10,6 @@ spring.jpa.show-sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.springframework.security=DEBUG
 
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.formalogging.level.root=INFO
+logging.level.com.gsb_appart.gsb_appart.Services=DEBUG
+_sql=true
